# kmpeek

./: .gitignore  Cargo.toml  README.md  castle_of_breakdown.kcl  coconut_mall.kcl  coconut_mall.kmp  course.kmp  dry_dry_ruins.kmp  maple_treeway.kcl  maple_treeway.kmp
assets/logos/: logo.ai  logo_banner.ai
src/: camera.rs  camera_input.rs  file_dialog.rs  flycontrol.rs  kcl.rs  kcl_file.rs  kcl_model.rs  kmp.rs  kmp_file.rs  kmp_model.rs  main.rs  main2.rs  mouse_picking.rs  sections.rs  ui.rs  undo.rs  utils.rs
src/camera/: components.rs  mod.rs  resources.rs  systems.rs
src/kcl/: components.rs  mod.rs  resources.rs  systems.rs
src/kmp/: mod.rs  resources.rs  systems.rs
src/ui/: app_state.rs  dock_tree.rs  file_dialog.rs  keybinds.rs  menu_bar.rs  mod.rs  resources.rs  settings.rs  systems.rs  top_bar.rs  ui_state.rs  update_ui.rs  util.rs  viewport.rs
src/ui/tabs/: edit.rs  mod.rs  mode.rs  outliner.rs  settings.rs  table.rs  view.rs  viewport.rs
src/ui1/: mod.rs  resources.rs  systems.rs
src/util/: cylinder.rs  kcl_file.rs  kmp_file.rs  mod.rs  read_write_arrays.rs  shapes.rs
src/viewer/: grid.rs  kcl_model.rs  kmp_model.rs  mod.rs  mouse_picking.rs  normalize.rs  undo.rs
src/viewer/camera/: fly.rs  gizmo_2d.rs  mod.rs  orbit.rs  topdown.rs
src/viewer/edit/: area_gizmo.rs  create_delete.rs  gizmo.rs  kcl_snap.rs  link_select_mode.rs  link_unlink.rs  link_unlink_path.rs  mod.rs  select.rs  transform_gizmo.rs  tweak.rs
src/viewer/kmp/: area.rs  checkpoints.rs  components.rs  csv.rs  meshes_materials.rs  mod.rs  ordering.rs  path.rs  point.rs  routes.rs  sections.rs  settings.rs
src/viewer/transform/: gizmo.rs  kcl_snap.rs  mod.rs  select.rs
test_files/boardcross_course/: course.kcl
test_files/desert_course/: course.kmp
test_files/shopping_course/: course.kmp
