[package]
name = "kmpeek"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_render",
    "bevy_winit",
    "bevy_pbr",
    "multi-threaded",
    "file_watcher",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "serialize",
    "bevy_gizmos",
] }

bevy_egui = "0.27.0"
bevy_mod_raycast = "0.17"
bevy_mod_outline = "0.7"
bevy_pkv = "0.10.0"
bevy_infinite_grid = "0.12.0"
transform-gizmo-egui = "0.1.0"
egui_dock = { version = "0.12", features = ["serde"] }
egui_extras = { version = "0.27.2", default-features = false, features = [
    "all_loaders",
] }
egui_file = "0.17.0"

binrw = "0.13.3"
bytemuck = "1.13.1"
byteorder = "1.4.3"
image = { version = "0.25.1", default-features = false, features = ["png"] }
num-traits = "0.2.15"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.26.1"
strum_macros = "0.26.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true
# for some reason setting codegen-units = 1 for release builds results in a seg fault (at least on macos), no idea why
# codegen-units = 1

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
