[package]
name = "kmpeek"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_render",
    "bevy_winit",
    "bevy_pbr",
    "multi_threaded",
    "file_watcher",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "serialize",
    "bevy_gizmos",
] }

# bevy_egui = "0.28.0"
bevy_egui = { git = "https://github.com/mvlabat/bevy_egui", branch = "fix-redraws" }
bevy_mod_raycast = "0.18"
bevy_mod_outline = "0.8.1"
bevy_pkv = { git = "https://github.com/v-kat/bevy_pkv", branch = "0.14" }
transform-gizmo-bevy = "0.3"
bevy_infinite_grid = "0.13"
egui_dock = { version = "0.13", features = ["serde"] }
egui_extras = { version = "0.28.1", default-features = false, features = [
    "all_loaders",
] }
egui_file = "0.18.0"

binrw = "0.14.0"
bytemuck = "1.13.1"
byteorder = "1.4.3"
image = { version = "0.25.1", default-features = false, features = ["png"] }
num-traits = "0.2.15"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.26.1"
strum_macros = "0.26.1"
bevy_vector_shapes = "0.8.0"
csv = "1.3.0"
derive-new = "0.6.0"
bon = { git = "https://github.com/elastio/bon" }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true
# for some reason setting codegen-units = 1 for release builds results in a seg fault (at least on macos), no idea why
codegen-units = 1

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
